# Primely

./: .gitignore  LICENSE  README.md
Backend/: README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 0c21f16a4018_set_click_events_user_agent_col_name_to_.py  163bbad116e9_initial_table_generation.py  33369c5c2243_updated_links_table_schema_and_set_all_.py  3f5c2ddaf709_updated_click_events_table_schema_and_.py  42504796ba6e_updated_links_table_schema_to_add_a_.py  7347565c9910_added_the_email_column_to_users_table.py  861de75c8c9b_set_click_events_ip_address_to_index_.py  ab61f733fb99_changed_id_type.py  c055dd309915_changed_refresh_token_datetime_columns_.py
Backend/app/: main.py
Backend/app/api/: api.py  dependencies.py
Backend/app/api/endpoints/: auth.py  links.py  root.py
Backend/app/api/endpoints/analytics/: helpers.py  router.py
Backend/app/core/: celery.py  config.py  database.py  logging.py  middleware.py  schedular.py  security.py
Backend/app/models/: models.py
Backend/app/schemas/: schemas.py
Backend/app/services/: authentication.py
Backend/app/tasks/: cleanup_tokens_task.py  click_event_task.py  expire_links_task.py  scan_links_task.py
Backend/app/tests/: conftest.py  test_auth_endpoints.py  test_auth_service.py  test_links_endpoint.py  test_me_endpoint.py  test_root_endpoint.py  test_scan_links_task.py  test_security.py
Backend/app/utils/: extract_browser.py  generate_short_code.py  scan_links.py
Frontend/: .cta.json  package.json  (+2 more)
(+60 files in other folders)
