[project]
name = "primely-backend"
version = "1.0.0"
description = "The backend of primely a url shortener"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "celery[sqlalchemy]>=5.6.3",
    "fastapi-offline>=1.7.6",
    "fastapi[standard]>=0.135.1",
    "psycopg2>=2.9.12",
    "psycopg[binary]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.11.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.37",
    "user-agents>=2.2.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
